amazon-lambda/1.1/modules/ROOT/pages/amazon-lambda-connector-reference.adoc
= Amazon Lambda Connector 1.1 Reference
:page-aliases: connectors::amazon/amazon-lambda-connector-reference.adoc


Anypoint Connector for Amazon Lambda (Amazon Lambda Connector) provides access to standard Amazon Lambda operations using Anypoint Platform.

== Before You Begin

Ensure you have the following:

* Java 8, 11, or 17
* Anypoint Studio 7.3.5 and later
* Mule runtime engine (Mule) 4.2.1 and later
* DataWeave

== Configurations
---
[[Config]]
=== Config


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | *x*{nbsp}
| Connection a| <<Config_Connection, Amazon Lambda Connection>>
| The connection types that can be provided to this configuration. | | *x*{nbsp}
| Response Timeout a| Number |  The timeout for request to the remote service. This value is qualified by the #responseTimeoutUnit |  1 | {nbsp}
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit which qualifies the #responseTimeout |  MINUTES | {nbsp}
| Name a| String |  The identifier of this element used to reference it in other components |  | *x*{nbsp}
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before the runtime considers it eligible for expiration. This does not mean that the platform will expire the instance at the exact moment that it becomes eligible. The runtime will actually purge the instances when it sees it fit. |  | {nbsp}
|===

==== Connection Types
[[Config_Connection]]
===== Amazon Lambda Connection


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Default Headers a| Array of <<DefaultHeader>> |  |  | {nbsp}
| Query Parameters a| Array of <<DefaultQueryParam>> |  |  | {nbsp}
| Connection Timeout a| Number |  The timeout for establishing connections to the remote service |  30 | {nbsp}
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit which qualifies the Connection Timeout |  SECONDS | {nbsp}
| Use Persistent Connections a| Boolean |  If false, each connection will be closed after the first request is completed. |  true | {nbsp}
| Max Connections a| Number |  The maximum number of outbound connections that will be kept open at the same time |  -1 | {nbsp}
| Connection Idle Timeout a| Number |  A timeout for how long a connection can remain idle before it is closed |  30 | {nbsp}
| Connection Idle Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit which qualifies the connection Idle Timeout |  SECONDS | {nbsp}
| Proxy Config a| <<Proxy>> |  Reusable configuration element for outbound connections through a proxy |  | {nbsp}
| Stream Response a| Boolean |  Whether or not received responses should be streamed |  false | {nbsp}
| Response Buffer Size a| Number |  The space in bytes for the buffer where the HTTP response will be stored. |  -1 | {nbsp}
| Access Key a| String |  The access key provided by Amazon. |  | *x*{nbsp}
| Secret Key a| String |  The secret key provided by Amazon. |  | *x*{nbsp}
| Region a| String |  The region of the amazon instance. |  us-east-1 | {nbsp}
| Role a| <<Role>> |  The Role Configuration to use. |  | {nbsp}
| Custom Service Endpoint a| String |  Sets a custom service endpoint. Useful when a non-standard service endpoint is required, such as a VPC endpoint. |  | {nbsp}
| Protocol a| Enumeration, one of:

** HTTP
** HTTPS |  Protocol to use for communication. Valid values are HTTP and HTTPS |  HTTP | {nbsp}
| TLS Configuration a| <<Tls>> |  |  | {nbsp}
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment will fail if the test doesn't pass after exhausting the associated reconnection strategy |  | {nbsp}
|===

==== Associated Operations
* <<Create20141113FunctionsInvokeAsyncByFunctionName>> {nbsp}
* <<Create20150331FunctionsInvocationsByFunctionName>> {nbsp}
* <<Get20150331Functions>> {nbsp}
* <<Get20150331FunctionsByFunctionName>> {nbsp}



== Operations

[[Create20141113FunctionsInvokeAsyncByFunctionName]]
== Invoke Async
`<amazon-lambda:create20141113-functions-invoke-async-by-function-name>`


For asynchronous function invocation, use Invoke. Invokes a function asynchronously. This operation makes an HTTP POST request to the /2014-11-13/functions/{FunctionName}/invoke-async/ endpoint


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Function Name a| String |  The name of the Lambda function. Name formats Function name - my-function. Function ARN - arn:aws:lambda:us-west-2:123456789012:function:my-function. Partial ARN - 123456789012:function:my-function. The length constraint applies only to the full ARN. If you specify only the function name, it is limited to 64 characters in length. |  | *x*{nbsp}
| Body a| Any |  the content to use |  #[payload] | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behaviour |  | {nbsp}
| Custom Query Parameters a| Object |  |  | {nbsp}
| Custom Headers a| Object |  |  | {nbsp}
| Response Timeout a| Number |  The timeout for request to the remote service. This value is qualified by the #responseTimeoutUnit |  | {nbsp}
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit which qualifies the #responseTimeout |  | {nbsp}
| Target Variable a| String |  The name of a variable on which the operation's output will be placed |  | {nbsp}
| Target Value a| String |  An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable |  #[payload] | {nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | {nbsp}
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Any
| *Attributes Type* a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>> {nbsp}

=== Throws

* AMAZON-LAMBDA:BAD_REQUEST {nbsp}
* AMAZON-LAMBDA:CLIENT_ERROR {nbsp}
* AMAZON-LAMBDA:CONNECTIVITY {nbsp}
* AMAZON-LAMBDA:INTERNAL_SERVER_ERROR {nbsp}
* AMAZON-LAMBDA:NOT_ACCEPTABLE {nbsp}
* AMAZON-LAMBDA:NOT_FOUND {nbsp}
* AMAZON-LAMBDA:RETRY_EXHAUSTED {nbsp}
* AMAZON-LAMBDA:SERVER_ERROR {nbsp}
* AMAZON-LAMBDA:SERVICE_UNAVAILABLE {nbsp}
* AMAZON-LAMBDA:TIMEOUT {nbsp}
* AMAZON-LAMBDA:TOO_MANY_REQUESTS {nbsp}
* AMAZON-LAMBDA:UNAUTHORIZED {nbsp}
* AMAZON-LAMBDA:UNSUPPORTED_MEDIA_TYPE {nbsp}


[[Create20150331FunctionsInvocationsByFunctionName]]
== Invoke
`<amazon-lambda:create20150331-functions-invocations-by-function-name>`


Invokes a Lambda function. You can invoke a function synchronously (and wait for the response), or asynchronously. To invoke a function asynchronously, set InvocationType to Event. For synchronous invocation, details about the function response, including errors, are included in the response body and headers. For either invocation type, you can find more information in the execution log and trace. When an error occurs, your function may be invoked multiple times. Retry behavior varies by error type, client, event source, and invocation type. For example, if you invoke a function asynchronously and it returns an error, Lambda executes the function up to two more times. For more information, see Retry Behavior. For asynchronous invocation, Lambda adds events to a queue before sending them to your function. If your function does not have enough capacity to keep up with the queue, events may be lost. Occasionally, your function may receive the same event multiple times, even if no error occurs. To retain events that were not processed, configure your function with a dead-letter queue. The status code in the API response doesn't reflect function errors. Error codes are reserved for errors that prevent your function from executing, such as permissions errors, limit errors, or issues with your function's code and configuration. For example, Lambda returns TooManyRequestsException if executing the function would cause you to exceed a concurrency limit at either the account level (ConcurrentInvocationLimitExceeded) or function level (ReservedFunctionConcurrentInvocationLimitExceeded). For functions with a long timeout, your client might be disconnected during synchronous invocation while it waits for a response. Configure your HTTP client, SDK, firewall, proxy, or operating system to allow for long connections with timeout or keep-alive settings. This operation requires permission for the lambda:InvokeFunction action. This operation makes an HTTP POST request to the /2015-03-31/functions/{FunctionName}/invocations endpoint


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Function Name a| String |  The name of the Lambda function, version, or alias. Name formats Function name - my-function (name-only), my-function:v1 (with alias). Function ARN - arn:aws:lambda:us-west-2:123456789012:function:my-function. Partial ARN - 123456789012:function:my-function. You can append a version number or alias to any of the formats. The length constraint applies only to the full ARN. If you specify only the function name, it is limited to 64 characters in length. |  | *x*{nbsp}
| Qualifier a| String |  Specify a version or alias to invoke a published version of the function. |  | {nbsp}
| X Amz Invocation Type a| Enumeration, one of:

** EVENT
** REQUEST_RESPONSE
** DRY_RUN |  Choose from the following options. RequestResponse (default) - Invoke the function synchronously. Keep the connection open until the function returns a response or times out. The API response includes the function response and additional data. Event - Invoke the function asynchronously. Send events that fail multiple times to the function's dead-letter queue (if it's configured). The API response only includes a status code. DryRun - Validate parameter values and verify that the user or role has permission to invoke the function. |  | {nbsp}
| X Amz Log Type a| Enumeration, one of:

** NONE
** TAIL |  Set to Tail to include the execution log in the response. |  | {nbsp}
| X Amz Client Context a| String |  Up to 3583 bytes of base64-encoded data about the invoking client to pass to the function in the context object. |  | {nbsp}
| Body a| Any |  the content to use |  #[payload] | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behaviour |  | {nbsp}
| Custom Query Parameters a| Object |  |  | {nbsp}
| Custom Headers a| Object |  |  | {nbsp}
| Response Timeout a| Number |  The timeout for request to the remote service. This value is qualified by the #responseTimeoutUnit |  | {nbsp}
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit which qualifies the #responseTimeout |  | {nbsp}
| Target Variable a| String |  The name of a variable on which the operation's output will be placed |  | {nbsp}
| Target Value a| String |  An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable |  #[payload] | {nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | {nbsp}
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Any
| *Attributes Type* a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>> {nbsp}

=== Throws

* AMAZON-LAMBDA:BAD_REQUEST {nbsp}
* AMAZON-LAMBDA:CLIENT_ERROR {nbsp}
* AMAZON-LAMBDA:CONNECTIVITY {nbsp}
* AMAZON-LAMBDA:INTERNAL_SERVER_ERROR {nbsp}
* AMAZON-LAMBDA:NOT_ACCEPTABLE {nbsp}
* AMAZON-LAMBDA:NOT_FOUND {nbsp}
* AMAZON-LAMBDA:RETRY_EXHAUSTED {nbsp}
* AMAZON-LAMBDA:SERVER_ERROR {nbsp}
* AMAZON-LAMBDA:SERVICE_UNAVAILABLE {nbsp}
* AMAZON-LAMBDA:TIMEOUT {nbsp}
* AMAZON-LAMBDA:TOO_MANY_REQUESTS {nbsp}
* AMAZON-LAMBDA:UNAUTHORIZED {nbsp}
* AMAZON-LAMBDA:UNSUPPORTED_MEDIA_TYPE {nbsp}


[[Get20150331Functions]]
== List Functions
`<amazon-lambda:get20150331-functions>`


Returns a list of Lambda functions, with the version-specific configuration of each. Lambda returns up to 50 functions per call. Set FunctionVersion to ALL to include all published versions of each function in addition to the unpublished version. The ListFunctions action returns a subset of the FunctionConfiguration fields. To get the additional fields (State, StateReasonCode, StateReason, LastUpdateStatus, LastUpdateStatusReason, LastUpdateStatusReasonCode) for a function or version, use GetFunction. This operation makes an HTTP GET request to the /2015-03-31/functions endpoint


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Master Region a| String |  For Lambda@Edge functions, the AWS Region of the master function. For example, us-east-1 filters the list of functions to only include Lambda@Edge functions replicated from a master function in US East (N. Virginia). If specified, you must set FunctionVersion to ALL. |  | {nbsp}
| Function Version a| Enumeration, one of:

** ALL |  Set to ALL to include entries for all published versions of each function. |  | {nbsp}
| Marker a| String |  Specify the pagination token that's returned by a previous request to retrieve the next page of results. |  | {nbsp}
| Max Items a| Number |  The maximum number of functions to return in the response. Note that ListFunctions returns a maximum of 50 items in each response, even if you set the number higher. |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behaviour |  | {nbsp}
| Custom Query Parameters a| Object |  |  #[null] | {nbsp}
| Custom Headers a| Object |  |  | {nbsp}
| Response Timeout a| Number |  The timeout for request to the remote service. This value is qualified by the #responseTimeoutUnit |  | {nbsp}
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit which qualifies the #responseTimeout |  | {nbsp}
| Target Variable a| String |  The name of a variable on which the operation's output will be placed |  | {nbsp}
| Target Value a| String |  An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable |  #[payload] | {nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | {nbsp}
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Any
| *Attributes Type* a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>> {nbsp}

=== Throws

* AMAZON-LAMBDA:BAD_REQUEST {nbsp}
* AMAZON-LAMBDA:CLIENT_ERROR {nbsp}
* AMAZON-LAMBDA:CONNECTIVITY {nbsp}
* AMAZON-LAMBDA:INTERNAL_SERVER_ERROR {nbsp}
* AMAZON-LAMBDA:NOT_ACCEPTABLE {nbsp}
* AMAZON-LAMBDA:NOT_FOUND {nbsp}
* AMAZON-LAMBDA:RETRY_EXHAUSTED {nbsp}
* AMAZON-LAMBDA:SERVER_ERROR {nbsp}
* AMAZON-LAMBDA:SERVICE_UNAVAILABLE {nbsp}
* AMAZON-LAMBDA:TIMEOUT {nbsp}
* AMAZON-LAMBDA:TOO_MANY_REQUESTS {nbsp}
* AMAZON-LAMBDA:UNAUTHORIZED {nbsp}
* AMAZON-LAMBDA:UNSUPPORTED_MEDIA_TYPE {nbsp}


[[Get20150331FunctionsByFunctionName]]
== Get Function
`<amazon-lambda:get20150331-functions-by-function-name>`


Returns information about the function or function version, with a link to download the deployment package that's valid for 10 minutes. If you specify a function version, only details that are specific to that version are returned. This operation makes an HTTP GET request to the /2015-03-31/functions/{FunctionName} endpoint


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Function Name a| String |  The name of the Lambda function, version, or alias. Name formats Function name - my-function (name-only), my-function:v1 (with alias). Function ARN - arn:aws:lambda:us-west-2:123456789012:function:my-function. Partial ARN - 123456789012:function:my-function. You can append a version number or alias to any of the formats. The length constraint applies only to the full ARN. If you specify only the function name, it is limited to 64 characters in length. |  | *x*{nbsp}
| Qualifier a| String |  Specify a version or alias to get details about a published version of the function. |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behaviour |  | {nbsp}
| Custom Query Parameters a| Object |  |  #[null] | {nbsp}
| Custom Headers a| Object |  |  | {nbsp}
| Response Timeout a| Number |  The timeout for request to the remote service. This value is qualified by the #responseTimeoutUnit |  | {nbsp}
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit which qualifies the #responseTimeout |  | {nbsp}
| Target Variable a| String |  The name of a variable on which the operation's output will be placed |  | {nbsp}
| Target Value a| String |  An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable |  #[payload] | {nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | {nbsp}
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Any
| *Attributes Type* a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>> {nbsp}

=== Throws

* AMAZON-LAMBDA:BAD_REQUEST {nbsp}
* AMAZON-LAMBDA:CLIENT_ERROR {nbsp}
* AMAZON-LAMBDA:CONNECTIVITY {nbsp}
* AMAZON-LAMBDA:INTERNAL_SERVER_ERROR {nbsp}
* AMAZON-LAMBDA:NOT_ACCEPTABLE {nbsp}
* AMAZON-LAMBDA:NOT_FOUND {nbsp}
* AMAZON-LAMBDA:RETRY_EXHAUSTED {nbsp}
* AMAZON-LAMBDA:SERVER_ERROR {nbsp}
* AMAZON-LAMBDA:SERVICE_UNAVAILABLE {nbsp}
* AMAZON-LAMBDA:TIMEOUT {nbsp}
* AMAZON-LAMBDA:TOO_MANY_REQUESTS {nbsp}
* AMAZON-LAMBDA:UNAUTHORIZED {nbsp}
* AMAZON-LAMBDA:UNSUPPORTED_MEDIA_TYPE {nbsp}



== Types
[[DefaultHeader]]
=== Default Header

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Key a| String |  |  | x
| Value a| String |  |  | x
|======================

[[DefaultQueryParam]]
=== Default Query Param

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Key a| String |  |  | x
| Value a| String |  |  | x
|======================

[[Proxy]]
=== Proxy

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Host a| String |  |  | x
| Port a| Number |  |  | x
| Username a| String |  |  |
| Password a| String |  |  |
| Non Proxy Hosts a| String |  |  |
|======================

[[Role]]
=== Role

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Arn a| String | The Amazon Resource Name (ARN) of the role to assume. |  | x
| Custom Sts Endpoint a| String |  |  |
|======================

[[Tls]]
=== Tls

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | A comma separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> |  |  |
| Key Store a| <<KeyStore>> |  |  |
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> |  |  |
|======================

[[TrustStore]]
=== Trust Store

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the trust store. |  |
| Password a| String | The password used to protect the trust store. |  |
| Type a| String | The type of store used. |  |
| Algorithm a| String | The algorithm used by the trust store. |  |
| Insecure a| Boolean | If true, no certificate validations will be performed, rendering connections vulnerable to attacks. Use at your own risk. |  |
|======================

[[KeyStore]]
=== Key Store

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the key store. |  |
| Type a| String | The type of store used. |  |
| Alias a| String | When the key store contains many private keys, this attribute indicates the alias of the key that should be used. If not defined, the first key in the file will be used by default. |  |
| Key Password a| String | The password used to protect the private key. |  |
| Password a| String | The password used to protect the key store. |  |
| Algorithm a| String | The algorithm used by the key store. |  |
|======================

[[StandardRevocationCheck]]
=== Standard Revocation Check

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain. |  |
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  |
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before). |  |
| Soft Fail a| Boolean | Avoid verification failure when the revocation server can not be reached or is busy. |  |
|======================

[[CustomOcspResponder]]
=== Custom Ocsp Responder

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the trust store), if present. |  |
|======================

[[CrlFile]]
=== Crl File

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  |
|======================

[[Reconnection]]
=== Reconnection

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment will fail if the test doesn't pass after exhausting the associated reconnection strategy |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | The reconnection strategy to use |  |
|======================

[[Reconnect]]
=== Reconnect

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often (in ms) to reconnect |  |
| Blocking a| Boolean | If false, the reconnection strategy will run in a separate, non-blocking thread |  |
| Count a| Number | How many reconnection attempts to make |  |
|======================

[[ReconnectForever]]
=== Reconnect Forever

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often (in ms) to reconnect |  |
| Blocking a| Boolean | If false, the reconnection strategy will run in a separate, non-blocking thread |  |
|======================

[[ExpirationPolicy]]
=== Expiration Policy

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|======================

[[HttpResponseAttributes]]
=== Http Response Attributes

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Status Code a| Number |  |  | x
| Headers a| Object |  |  | x
| Reason Phrase a| String |  |  | x
|======================

[[RepeatableInMemoryStream]]
=== Repeatable In Memory Stream

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | This is the amount of memory that will be allocated in order to consume the stream and provide random access to it. If the stream contains more data than can be fit into this buffer, then it will be expanded by according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. |  |
| Buffer Size Increment a| Number | This is by how much will be buffer size by expanded if it exceeds its initial size. Setting a value of zero or lower will mean that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error will be raised when the buffer gets full. |  |
| Max Buffer Size a| Number | This is the maximum amount of memory that will be used. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error will be raised. A value lower or equal to zero means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which all these attributes are expressed |  |
|======================

[[RepeatableFileStoreStream]]
=== Repeatable File Store Stream

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Defines the maximum memory that the stream should use to keep data in memory. If more than that is consumed then it will start to buffer the content on disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|======================

== See Also

* xref:index.adoc[Amazon Lambda Connector Overview]
* https://help.mulesoft.com[MuleSoft Help Center]